--- a/assignment2/fraud2.ipynb
+++ b/assignment2/fraud2.ipynb
@@ -222,32 +222,32 @@
     "# - fill NAs\n",
     "# - try to run PCA\n",
     "# - do dimensionality reduction and use those features\n",
-    "# v =  [1, 3, 4, 6, 8, 11]\n",
-    "# v += [13, 14, 17, 20, 23, 26, 27, 30]\n",
-    "# v += [36, 37, 40, 41, 44, 47, 48]\n",
-    "# v += [54, 56, 59, 62, 65, 67, 68, 70]\n",
-    "# v += [76, 78, 80, 82, 86, 88, 89, 91]\n",
-    "# v += [96, 98, 99, 104]\n",
-    "# v += [107, 108, 111, 115, 117, 120, 121, 123]\n",
-    "# v += [124, 127, 129, 130, 136]\n",
-    "# v += [138, 139, 142, 147, 156, 162]\n",
-    "# v += [165, 160, 166]\n",
-    "# v += [178, 176, 173, 182]\n",
-    "# v += [187, 203, 205, 207, 215]\n",
-    "# v += [169, 171, 175, 180, 185, 188, 198, 210, 209]\n",
-    "# v += [218, 223, 224, 226, 228, 229, 235]\n",
-    "# v += [240, 258, 257, 253, 252, 260, 261]\n",
-    "# v += [264, 266, 267, 274, 277]\n",
-    "# v += [220, 221, 234, 238, 250, 271]\n",
-    "# v += [294, 284, 285, 286, 291, 297]\n",
-    "# v += [303, 305, 307, 309, 310, 320]\n",
-    "# v += [281, 283, 289, 296, 301, 314]\n",
-    "# v += [332, 325, 335, 338]\n",
+    "v =  [1, 3, 4, 6, 8, 11]\n",
+    "v += [13, 14, 17, 20, 23, 26, 27, 30]\n",
+    "v += [36, 37, 40, 41, 44, 47, 48]\n",
+    "v += [54, 56, 59, 62, 65, 67, 68, 70]\n",
+    "v += [76, 78, 80, 82, 86, 88, 89, 91]\n",
+    "v += [96, 98, 99, 104]\n",
+    "v += [107, 108, 111, 115, 117, 120, 121, 123]\n",
+    "v += [124, 127, 129, 130, 136]\n",
+    "v += [138, 139, 142, 147, 156, 162]\n",
+    "v += [165, 160, 166]\n",
+    "v += [178, 176, 173, 182]\n",
+    "v += [187, 203, 205, 207, 215]\n",
+    "v += [169, 171, 175, 180, 185, 188, 198, 210, 209]\n",
+    "v += [218, 223, 224, 226, 228, 229, 235]\n",
+    "v += [240, 258, 257, 253, 252, 260, 261]\n",
+    "v += [264, 266, 267, 274, 277]\n",
+    "v += [220, 221, 234, 238, 250, 271]\n",
+    "v += [294, 284, 285, 286, 291, 297]\n",
+    "v += [303, 305, 307, 309, 310, 320]\n",
+    "v += [281, 283, 289, 296, 301, 314]\n",
+    "v += [332, 325, 335, 338]\n",
     "\n",
-    "# v = set(v)\n",
-    "# to_drop = [f\"V{i}\" for i in range(1, 340) if i not in v]\n",
-    "# X_train = X_train.drop(columns=to_drop)\n",
-    "# X_test = X_test.drop(columns=to_drop)"
+    "v = set(v)\n",
+    "to_drop = [f\"V{i}\" for i in range(1, 340) if i not in v]\n",
+    "X_train = X_train.drop(columns=to_drop)\n",
+    "X_test = X_test.drop(columns=to_drop)"
    ]
   },
   {
