Add hyperparameter tunning
Signed-off-by: Erik-Cristian Seulean <erikseulean@gmail.com>

--- a/assignment2/fraud2.ipynb
+++ b/assignment2/fraud2.ipynb
@@ -23,7 +23,8 @@
     "\n",
     "import xgboost as xgb\n",
     "from sklearn import preprocessing\n",
-    "from sklearn.model_selection import GroupKFold \n",
+    "from sklearn.model_selection import GroupKFold\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c81c7daa",
    "metadata": {},
    "outputs": [],
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "2fbdc0bb",
    "metadata": {},
    "outputs": [],
@@ -131,13 +132,14 @@
     "\n",
     "# this does decref so GC can pick them up\n",
     "# helps having more free ram and less swap on disk\n",
+    "# if potentially all the ram is used (although )\n",
     "test_identity = None\n",
     "train_identity = None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "58965ae8",
    "metadata": {},
    "outputs": [],
@@ -146,6 +148,16 @@
     "y_train = X_train[\"isFraud\"].copy()\n",
     "X_train = X_train.drop(columns=[\"isFraud\"])\n",
     "X_test.columns = X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "65dcc607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train.to_csv(\"y_train.csv\")"
    ]
   },
   {
@@ -877,6 +889,51 @@
     "submission = pd.read_csv(\"../ieee_fraud_data/sample_submission.csv\")\n",
     "submission.isFraud = predictions\n",
     "submission.to_csv(\"xgb_cv.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12163514",
+   "metadata": {},
+   "source": [
+    "### Find best hyperparameters for the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8e6b539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distributions = {\n",
+    "    \"subsample\": [0.2, 0.4, 0.6, 0.8],\n",
+    "    \"max_depth\": range(5, 13),\n",
+    "    \"colsample_bytree\": [0.2, 0.4, 0.6, 0.8]\n",
+    "}\n",
+    "\n",
+    "X_train = pd.concat([X_train[X_train[\"Fold\"] == index][:10000] for index in range(1, 7)])\n",
+    "y_train = y_train.loc[X_train.index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1d39f8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kfold = GroupKFold(n_splits=6)\n",
+    "\n",
+    "model = xgb.XGBClassifier(         \n",
+    "        learning_rate=0.02,\n",
+    "        missing=-1, \n",
+    "        eval_metric='auc',\n",
+    ")\n",
+    "grid_search = RandomizedSearchCV(model, distributions, scoring=\"roc_auc\", n_jobs=-1, cv=kfold, verbose=10)\n",
+    "grid_result = grid_search.fit(X_train, y_train[\"isFraud\"], groups=X_train[\"Fold\"])\n",
+    "# summarize results\n",
+    "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))"
    ]
   }
  ],
